--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,13 +1,15 @@
 @import './base.css';
 
+
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-
+  height: 100vh;
   font-weight: normal;
 }
-
+/*
 a,
 .green {
   text-decoration: none;
@@ -33,3 +35,4 @@ a,
     padding: 0 2rem;
   }
 }
+*/
